--- a/tyyli.css
+++ b/tyyli.css
@@ -48,6 +48,10 @@ nav a {
     text-decoration: none;
     display: inline-block;
     border: 2px solid rgb(90, 21, 21);
+    border-radius: 10px;
+    padding: 10px;
+    margin-right: 10px;
+    margin-bottom: 10px;
 }
 
 nav a:hover {
@@ -57,4 +61,11 @@ nav a:hover {
 #valittu {
     color: rgb(21, 18, 18);
     background-color: blanchedalmond;
+}
+
+.grid-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr; /* Kaksi saraketta, muuta miten haluat */
+    gap: 20px;
+    padding: 30px;
 }
