--- a/tyyli.css
+++ b/tyyli.css
@@ -118,6 +118,22 @@ footer {
     width: 100%;
 }
 
+/* Lisää tarvittaessa muita tyylejä */
+.video-container {
+    position: relative;
+    width: 100%;
+    padding-bottom: 56.25%; /* 16:9-kuvasuhde */
+    height: 0;
+}
+
+.video-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
 
 
 
